# kinematics

./: .gitignore  README.md  pyproject.toml
beamer_template/: main.tex  references.bib
bumpy_lecture/beamer/: main.tex  references.bib
bumpy_lecture/beamer/code/: acceleration.py  argparse_cli.py  bumpy_loop.py  explore_load.py  frequency_analysis.py  load_road_csv.py  pickle_rms.py  session_linear.py  session_quadratic.py  solver_full_part1.py  solver_full_part2.py  solver_linear.py  sympy_demo.py  test_solver.py
bumpy_lecture/beamer/sections/: 01_model.tex  02_numerics.tex  03_roads_and_force.tex  04_pipeline.tex  05_explore.tex  06_verification.tex
bumpy_road/: README.md  bumpy.py  bumpy_road_anim.py  clean.sh  draw_bumpy.csv  explore.py  generate_road_profiles.py  plot_roads.py  timings.py
bumpy_road/tests/: test_bumpy.py
python_intro/: README.md  input.yaml  list.py  plot2.py  plot3.py  plot3_vec.py  while.py  while_demo.py  while_list.py
python_lecture/beamer/: main.tex
python_lecture/beamer/code/: distance.py  for_array.py  for_file_read_input.py  for_list.py  plot1.py
python_lecture/beamer/sections/: 01_variables.tex  02_functions.tex  03_files.tex  04_classes.tex
robot_turtle/: README.md  kinematics.md  robot_interactive.py  robot_path.py  robot_path_gifs.sh
robot_turtle/path/: README.md  __init__.py  generator.py  loader.py
robot_turtle/robot/: __init__.py  control.py  robot.py
robot_turtle/utils/: __init__.py  app.py  compute.py  waypoints.py
scipy_intro/: README.md  finite_difference_operator.py  tridiagonal.py
(+11 files in other folders)
